--- a/top-down plan.ipynb
+++ b/top-down plan.ipynb
@@ -4,45 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The goal is to get the key concepts from an article - this is using an approximation of the LSA algorithm"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "next, the goal is to take the labels, gotten from title names for the articles, and use them to evaluate the hyperparameters of the model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Get raw word counts"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "find out how often title words appear in the articles - could I just use article title words with stopwords removed as topics?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "for unsupervised topic modelling, try LDA\n",
     "given more time, I'd do more research on things like this: \"Unsupervised Topic Modeling for Short Texts Using Distributed\n",
     "Representations of Words\" https://www.aclweb.org/anthology/W15-1526.pdf , that claim to beat LDA"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "need some basic stats on the text: \n",
-    "    - how many words are in the original article"
    ]
   },
   {
@@ -70,6 +34,25 @@
     "    - bonus - sent_tokenize the Wiki articles for data augmentation\n",
     "    - \"ground truth\" doesn't exist here, but the article titles and first couple of lines of the articles probably contain key terms\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "having tried finding agreement between models - seems to be a bad idea, because what's to say a topic is matched to another? obvious logic hole"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "new plan: make word2vec vectors from the corpus*\n",
+    "    - cluster said vectors into n categories - consider those \"topics\"\n",
+    "    - find cluster mean\n",
+    "    - find most similar vector\n",
+    "    \n",
+    "*considered doc2vec, but since word vectors supposedly take the context into account, I'll take the automatic data augmentation"
    ]
   },
   {
